Use uint32_t instead of u_int32_t in coverage.cpp

Fixes build errors on Solaris by using C99 standard type.
https://bugzilla.gnome.org/show_bug.cgi?id=776193

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>